--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cuke-tree",
-  "version": "0.2.9",
+  "version": "0.2.10",
   "description": "A hierarchical Cucumber test report generator and IDE.",
   "author": {
     "name": "Pete Clark",
@@ -22,14 +22,15 @@
     "xml2js": "= 0.1.14",
     "randomstring": "=1.0.1",
     "fs.extra": "=1.2.0",
-    "mkdirp": "=0.3.4"
+    "mkdirp": "=0.3.4",
+    "dateformat": "~1.0.3-1.2.3"
   },
   "main": "./lib/cukeTree.js",
   "keywords": [
     "cucumber",
     "cuke",
     "tree",
-		"bdd",
+    "bdd",
     "html",
     "report",
     "ide",
@@ -38,7 +39,7 @@
   "bin": {
     "cuketree": "./lib/cli/cli.js"
   },
-	"repository": {
+  "repository": {
     "type": "git",
     "url": "git://github.com/peteclark82/cuke-tree"
   },
