--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "randomstring": "=1.0.1",
     "fs.extra": "=1.2.0",
     "mkdirp": "=0.3.4",
-    "dateformat": "~1.0.3-1.2.3"
+    "dateformat": "~1.0.3-1.2.3",
+    "growing-file": "~0.1.3",
+    "JSONStream": "~0.6.4"
   },
   "main": "./lib/cukeTree.js",
   "keywords": [
