--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mkdirp": "=0.3.4",
     "dateformat": "~1.0.3-1.2.3",
     "growing-file": "~0.1.3",
-    "JSONStream": "~0.6.4"
+    "JSONStream": "~0.6.4",
+    "myriad-cucumber": "~0.2.12"
   },
   "main": "./lib/cukeTree.js",
   "keywords": [
@@ -41,6 +42,10 @@
   "bin": {
     "cuketree": "./lib/cli/cli.js"
   },
+  "scripts": {
+    "start": "node lib/cli/cli.js -c ide",
+    "test": "node lib/cli/cli.js -c default"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/peteclark82/cuke-tree"
@@ -53,5 +58,8 @@
       "type": "MIT",
       "url": "https://github.com/peteclark82/cuke-tree/LICENSE"
     }
-  ]
+  ],
+  "devDependencies": {
+    "cucumber": "=0.3.0"
+  }
 }
