--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dateformat": "~1.0.3-1.2.3",
     "growing-file": "~0.1.3",
     "JSONStream": "~0.6.4",
+    "cucumber": "~0.3.0",
+    "gherkin": "~2.12.0",
     "myriad-cucumber": "~0.2.12"
   },
   "main": "./lib/cukeTree.js",
