--- a/package.json
+++ b/package.json
@@ -26,9 +26,17 @@
     "dateformat": "~1.0.3-1.2.3",
     "growing-file": "~0.1.3",
     "JSONStream": "~0.6.4",
-    "cucumber": "~0.3.0",
-    "gherkin": "~2.12.0",
-    "myriad-cucumber": "~0.2.12"
+    "gherkin": "~2.12.0"
+  },
+  "devDependencies": {
+    "grunt-cli": "~0.1.13",
+    "grunt": "~0.4.4",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-shell": "~0.7.0",
+    "grunt-mkdir": "~0.1.1",
+    "cucumber": ">=0.4.0",
+    "parallel-cucumber": ">=0.1.3"
   },
   "main": "./lib/cukeTree.js",
   "keywords": [
@@ -46,7 +54,7 @@
   },
   "scripts": {
     "start": "node lib/cli/cli.js -c ide",
-    "test": "node lib/cli/cli.js -c default"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
@@ -60,8 +68,5 @@
       "type": "MIT",
       "url": "https://github.com/peteclark82/cuke-tree/LICENSE"
     }
-  ],
-  "devDependencies": {
-    "cucumber": "=0.3.0"
-  }
+  ]
 }
